# marian-dev

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CMakeSettingsCI.json  LICENSE.md  README.md  VERSION  azure-pipelines.yml  azure-regression-tests.yml  copy_to_valhalla.sh  pyproject.toml
src/: .dir-locals.el  CMakeLists.txt  marian.h  mlflow_wrapper.h
src/command/: bug_repro.cpp  marian.cpp  marian_adaptive.cpp  marian_adaptive_server.cpp  marian_conv.cpp  marian_decoder.cpp  marian_evaluator.cpp  marian_main.cpp  marian_scorer.cpp  marian_self_adapt.cpp  marian_server.cpp  marian_similarity.cpp  marian_swapper.cpp  marian_train.cpp  marian_vocab.cpp
src/common/: aliases.cpp  binary.cpp  binary.h  blas_initializer.cpp  blas_initializer.h  build_info.cpp.in  build_info.h  cli_helper.h  cli_wrapper.cpp  cli_wrapper.h  config.cpp  config.h  config_parser.cpp  config_parser.h  config_validator.cpp  config_validator.h  const_map.h  counting_ptr.h  crypt.h  definitions.h  fast_opt.h  fastopt.cpp  fastopt.h  file_stream.cc  file_stream.cpp  file_stream.h  file_utils.cpp  filesystem.cpp  filesystem.h  hash.cpp  hash.h  icky_ptr.h  intrusive_ptr.h  io.cpp  io.h  io_item.h  logging.cpp  logging.h  options.cpp  options.h  (+10 more)
src/data/: adaptive_context.cpp  adaptive_context.h  batch.h  batch_generator.h  corpus.cpp  corpus.h  corpus_base.cpp  corpus_base.h  corpus_nbest.cpp  corpus_nbest.h  corpus_sqlite.cpp  corpus_sqlite.h  dataset.h  default_vocab.cpp  factored_vocab.cpp  factored_vocab.h  rng_engine.h  sentencepiece_vocab.cpp  shortlist.cpp  shortlist.h  text_input.cpp  text_input.h  text_input2.hpp  types.h  vocab.cpp  vocab.h  vocab_base.h  xml.cpp  xml.h
src/embedder/: embedder.h  vector_collector.cpp  vector_collector.h
src/evaluator/: evaluator.h
src/functional/: approx.h  array.h  constants.h  defs.h  derivation.h  functional.h  operands.h  operators.h  predicates.h  shape.h  simplification.h  tensor.h  tensor_predicates.h  tmp.h
src/gpu/: primitives.h  shape.h  tensor.h
src/graph/: auto_tuner.h  backend.h  backend_cpu.h  backend_gpu.h  cached_expression.h  chainable.h  expression_graph.cpp  expression_graph.h  expression_operators.cpp  expression_operators.cu  expression_operators.h  node.cpp  node.h  node_initializers.cpp  node_initializers.h  node_operators.cpp  node_operators.h  node_operators_binary.h  node_operators_tuple.h  node_operators_unary.h  parameters.h
src/kernels/: cudnn_wrappers.cu  cudnn_wrappers.h  dropout.cpp  dropout.cu  dropout.h  sparse.cpp  sparse.cu  sparse.h  sparse_cpu.h  sparse_gpu.h  tensor_operators.cpp  tensor_operators.cu  tensor_operators.h  tensor_operators_cpu.h  tensor_operators_gpu.h  thrust_functions.h
src/layers/: constructors.h  convolution.cu  convolution.h  embedding.cpp  embedding.h  factory.h  generic.cpp  generic.h  guided_alignment.h  highway.h  logits.cpp  loss.cpp  loss.h  lsh.cpp  lsh.h  lsh_avx512popcnt.cpp  lsh_generic.cpp  lsh_neon.cpp  lsh_tmp.h  output.cpp  param_initializers.cpp  param_initializers.cu  param_initializers.h  weight.cpp  weight.h  word2vec_reader.h
src/layers_new/: alibi.cpp  alibi.cu  alibi.h  attention.cpp  attention.h  decoder.h  embeddings.h  interface.h  neuralnet.cpp  neuralnet.h  rnn.h  transformer.h
src/microsoft/: cosmos.cpp  quicksand.cpp  quicksand.h
src/mlflow/: mlflow_wrapper.cpp  mlflow_wrapper.h
src/models/: amun.h  bert.h  bleurt.h  char_s2s.h  classifier.h  comet_qe.h  costs.h  decoder.h  encdec.h  encoder.h  encoder_char_conv.h  encoder_classifier.h  encoder_decoder.cpp  encoder_decoder.h  encoder_pooler.h  encoder_similarity.cpp  encoder_similarity.h  frantic.h  model_base.h  model_factory.cpp  model_factory.h  model_task.h  nematus.h  s2s.h  s2s_no_att.h  schwenk.h  states.h  sutskever.h  sutskever_template.h  transformer.h  transformer_factory.h  transformer_int.h  transformer_new.h  transformer_stub.cpp
src/onnx/: expression_graph_onnx_exporter.cpp
src/optimizers/: clippers.cpp  clippers.h  compresser.cpp  compresser.cu  compresser.h  exponential_smoothing.cpp  exponential_smoothing.h  optimizers.cpp  optimizers.h  pruner.h  quantizer.cpp  quantizer.h  regularizer.h
src/python/: CMakeLists.txt  README.md  build-manylinux.sh  build.sh  mtapi-server.py  mtapi_server.py  pyproject.toml  pyproject_version.py  qtdemo.py  requirements.txt  setup.py  test.py  test_foobar_translate.py  test_hf_translate.py  test_translate.py
src/rescorer/: rescorer.h  score_collector.cpp  score_collector.h  similarity.h
src/rnn/: attention.cpp  attention.h  cells.cpp  cells.h  constructors.h  rnn.h  types.h
src/server/: amqp_worker.cpp  queue.h  queued_input.cpp  queued_input.h  rest_server.cpp  rpc_client.py  server-test.cpp  translation_job.cpp  translation_job.h  translation_service.h  translation_worker.h  websocket-client.py  websocket-server.cpp
src/service/: CMakeLists.txt
src/tensors/: allocator.h  backend.cpp  backend.h  device.h  device_cpu.cpp  device_cpu.h  device_gpu.h  dispatch.h  get_set.h  memory_piece.h  rand.cpp  rand.h  residency.h  tensor.cpp  tensor.cu  tensor.h  tensor_allocator.h  tensor_operators.h
src/tests/: CMakeLists.txt  attention_tests.cpp  cli.cpp  dropout_test.cpp  fp16.cu  graph_tests.cpp  nth_test.cu  operator_grad_tests.cpp  operator_tests.cpp  pooling.cpp  prod.cpp  rnn_tests.cpp  sqlite.cpp  tensor_test.cu  transformer_new.cpp  view_tests.cpp
src/training/: communicator.cpp  communicator.h  communicator_mpi.h  communicator_nccl.h  config.cpp  config.h  dropper.h  dropper_cpu.h  dropper_gpu.h  graph_group.cpp  graph_group.h  graph_group_async.cpp  graph_group_async.cu  graph_group_async.h  graph_group_async_drop.cpp  graph_group_async_drop.cu  graph_group_async_drop.h  graph_group_multinode.cpp  graph_group_multinode.h  graph_group_multinode_sync.cpp  graph_group_multinode_sync.h  graph_group_singleton.cpp  graph_group_singleton.cu  graph_group_singleton.h  graph_group_sync.cpp  graph_group_sync.cu  graph_group_sync.h  multinode.cpp  multinode.h  quantize_utils.h  scheduler.cpp  scheduler.h  (+8 more)
(+336 files in other folders)
